Fix date picker's z-index

--- a/src/styles/datepicker.scss
+++ b/src/styles/datepicker.scss
@@ -12,6 +12,7 @@
       0 2px 6px rgba(0, 0, 0, 0.05),
       0 0 0 1px rgba(0, 0, 0, 0.07);
     background-color: $darkest;
+    z-index: 3;
   }
 }
 
